minor endpoints changes and new endpoint fetch-all-calculate
