# src/main/resources/api.yml
@@ -28,19 +28,20 @@ paths:
             $ref: '#/definitions/Version'
             
    # This is the trust scoring and ranking path endpoint.
-  /score:
+  /calculate/custom:
     post:
-      description: get trust score and rank
+      description: Get trust score and rank using custom trust policy
       produces:
       - application/json
-      operationId: "scoring"
+      operationId: "calculateCustom"
       parameters:
         - in: "body"
           name: "body"
-          description: "trust request in a json format"
+          description: " Trust request in a json format"
           required: true
           schema:
                 type: string
+ 
       responses:
         # Response code
         200:
